[gd_scene load_steps=100 format=2]

[ext_resource path="res://levels/Level_template.gd" type="Script" id=1]
[ext_resource path="res://assets/images/grid_tile.png" type="Texture" id=2]
[ext_resource path="res://actors/MACC_bot.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/wall_tilemap.png" type="Texture" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 16, 64, 16, 16, 64, 16, 64, 48, 48, 48, 48, 64 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 16, 48 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 0, 16, 48, 16, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 64, 16, 64, 16, 48, 0, 48, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 0, 16, 64, 16, 64, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=14]
polygon = PoolVector2Array( 16, 0, 48, 0, 48, 64, 16, 64 )

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 16, 0, 48, 0, 48, 16, 64, 16, 64, 64, 16, 64, 16, 0, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( 16, 0, 64, 0, 64, 48, 48, 48, 48, 64, 16, 64 )

[sub_resource type="OccluderPolygon2D" id=19]
polygon = PoolVector2Array( 0, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=20]
polygon = PoolVector2Array( 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 0 )

[sub_resource type="OccluderPolygon2D" id=21]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=22]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=23]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=24]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=25]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=27]
polygon = PoolVector2Array( 16, 0, 64, 0, 64, 64, 16, 64 )

[sub_resource type="OccluderPolygon2D" id=28]
polygon = PoolVector2Array( 0, 16, 64, 16, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=29]
polygon = PoolVector2Array( 0, 16, 64, 16, 64, 64, 16, 64, 16, 48, 0, 48, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=30]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=31]
polygon = PoolVector2Array( 0, 16, 48, 16, 48, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=32]
polygon = PoolVector2Array( 16, 16, 48, 16, 48, 64, 16, 64, 16, 16 )

[sub_resource type="OccluderPolygon2D" id=33]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=34]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 48, 0, 48, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=35]
polygon = PoolVector2Array( 0, 16, 64, 16, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=36]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=37]
polygon = PoolVector2Array( 16, 0, 16, 48, 48, 48, 48, 0 )

[sub_resource type="OccluderPolygon2D" id=38]
polygon = PoolVector2Array( 16, 16, 64, 16, 64, 48, 16, 48, 16, 16, 16, 16 )

[sub_resource type="OccluderPolygon2D" id=39]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=40]
polygon = PoolVector2Array( 16, 16, 48, 16, 48, 48, 16, 48 )

[sub_resource type="OccluderPolygon2D" id=41]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=42]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 48, 48, 48, 48, 64, 0, 64, 0, 16 )

[sub_resource type="OccluderPolygon2D" id=43]
polygon = PoolVector2Array( 16, 16, 64, 16, 64, 64, 16, 64 )

[sub_resource type="OccluderPolygon2D" id=44]
polygon = PoolVector2Array( 16, 0, 64, 0, 64, 48, 16, 48 )

[sub_resource type="OccluderPolygon2D" id=45]
polygon = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="OccluderPolygon2D" id=46]
polygon = PoolVector2Array( 0, 16, 48, 16, 48, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=47]
polygon = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=48]
points = PoolVector2Array( 16, 64, 16, 16, 64, 16, 64, 48, 48, 48, 48, 64 )

[sub_resource type="ConvexPolygonShape2D" id=49]
points = PoolVector2Array( 0, 16, 64, 16, 64, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=50]
points = PoolVector2Array( 0, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=51]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=52]
points = PoolVector2Array( 0, 16, 48, 16, 48, 48, 0, 48, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=53]
points = PoolVector2Array( 48, 0, 48, 48, 16, 48, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=54]
points = PoolVector2Array( 16, 64, 16, 16, 64, 16, 64, 64, 16, 64 )

[sub_resource type="ConvexPolygonShape2D" id=55]
points = PoolVector2Array( 0, 16, 48, 16, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=56]
points = PoolVector2Array( 48, 0, 48, 16, 64, 16, 64, 48, 16, 48, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=57]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=58]
points = PoolVector2Array( 16, 64, 16, 0, 48, 0, 48, 64, 16, 64 )

[sub_resource type="ConvexPolygonShape2D" id=59]
points = PoolVector2Array( 16, 64, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64 )

[sub_resource type="ConvexPolygonShape2D" id=60]
points = PoolVector2Array( 16, 0, 48, 0, 48, 64, 16, 64, 16, 48, 0, 48, 0, 16, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=61]
points = PoolVector2Array( 16, 64, 16, 16, 48, 16, 48, 64 )

[sub_resource type="ConvexPolygonShape2D" id=62]
points = PoolVector2Array( 16, 48, 16, 16, 64, 16, 64, 48 )

[sub_resource type="ConvexPolygonShape2D" id=63]
points = PoolVector2Array( 64, 0, 64, 48, 16, 48, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=64]
points = PoolVector2Array( 0, 0, 48, 0, 48, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=65]
points = PoolVector2Array( 0, 64, 0, 0, 64, 0, 64, 48, 48, 48, 48, 64 )

[sub_resource type="ConvexPolygonShape2D" id=66]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=67]
points = PoolVector2Array( 0, 0, 64, 0, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=68]
points = PoolVector2Array( 48, 0, 48, 16, 64, 16, 64, 64, 0, 64, 0, 16, 16, 16, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=69]
points = PoolVector2Array( 64, 0, 64, 64, 16, 64, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=70]
points = PoolVector2Array( 0, 0, 48, 0, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=71]
points = PoolVector2Array( 0, 64, 0, 0, 64, 0, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=72]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=73]
points = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=74]
points = PoolVector2Array( 16, 0, 64, 0, 64, 64, 0, 64, 0, 16, 16, 16 )

[sub_resource type="ConvexPolygonShape2D" id=75]
points = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=76]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=77]
points = PoolVector2Array( 0, 16, 64, 16, 64, 64, 0, 64, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=78]
points = PoolVector2Array( 0, 0, 64, 0, 64, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=79]
points = PoolVector2Array( 16, 16, 48, 16, 48, 48, 16, 48 )

[sub_resource type="ConvexPolygonShape2D" id=80]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=81]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=82]
points = PoolVector2Array( 16, 64, 16, 0, 48, 0, 48, 16, 64, 16, 64, 64, 16, 64 )

[sub_resource type="ConvexPolygonShape2D" id=83]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 48, 0, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=84]
points = PoolVector2Array( 0, 16, 64, 16, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=85]
points = PoolVector2Array( 0, 16, 64, 16, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=86]
points = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=87]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=88]
points = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 48, 48, 48, 48, 64, 16, 64, 16, 48, 0, 48, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=89]
points = PoolVector2Array( 16, 64, 16, 0, 64, 0, 64, 48, 48, 48, 48, 64 )

[sub_resource type="ConvexPolygonShape2D" id=90]
points = PoolVector2Array( 0, 0, 48, 0, 48, 64, 16, 64, 16, 48, 0, 48, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=91]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=92]
points = PoolVector2Array( 0, 0, 48, 0, 48, 16, 64, 16, 64, 48, 0, 48 )

[sub_resource type="ConvexPolygonShape2D" id=93]
points = PoolVector2Array( 0, 16, 16, 16, 16, 0, 64, 0, 64, 48, 48, 48, 48, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=94]
points = PoolVector2Array( 0, 16, 48, 16, 48, 64, 16, 64, 16, 48, 0, 48 )

[sub_resource type="TileSet" id=95]
0/name = "floor"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wall"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 576, 384 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 50, Vector2( 0, 2 ), 255, Vector2( 0, 3 ), 507, Vector2( 0, 4 ), 442, Vector2( 0, 5 ), 190, Vector2( 1, 0 ), 152, Vector2( 1, 1 ), 26, Vector2( 1, 2 ), 447, Vector2( 1, 3 ), 510, Vector2( 1, 4 ), 250, Vector2( 1, 5 ), 187, Vector2( 2, 0 ), 56, Vector2( 2, 1 ), 146, Vector2( 2, 2 ), 191, Vector2( 2, 3 ), 251, Vector2( 2, 4 ), 434, Vector2( 2, 5 ), 182, Vector2( 3, 0 ), 184, Vector2( 3, 1 ), 178, Vector2( 3, 2 ), 506, Vector2( 3, 3 ), 446, Vector2( 3, 4 ), 218, Vector2( 3, 5 ), 155, Vector2( 4, 0 ), 58, Vector2( 4, 1 ), 154, Vector2( 4, 2 ), 438, Vector2( 4, 3 ), 504, Vector2( 4, 4 ), 440, Vector2( 4, 5 ), 62, Vector2( 5, 0 ), 24, Vector2( 5, 1 ), 144, Vector2( 5, 2 ), 219, Vector2( 5, 3 ), 63, Vector2( 5, 4 ), 248, Vector2( 5, 5 ), 59, Vector2( 6, 0 ), 18, Vector2( 6, 1 ), 48, Vector2( 6, 2 ), 511, Vector2( 6, 3 ), 16, Vector2( 6, 4 ), 443, Vector2( 6, 5 ), 254, Vector2( 7, 0 ), 432, Vector2( 7, 1 ), 54, Vector2( 7, 2 ), 186, Vector2( 8, 0 ), 216, Vector2( 8, 1 ), 27 ]
1/autotile/icon_coordinate = Vector2( 6, 3 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [ Vector2( 0, 0 ), SubResource( 1 ), Vector2( 0, 1 ), SubResource( 2 ), Vector2( 0, 2 ), SubResource( 3 ), Vector2( 0, 3 ), SubResource( 4 ), Vector2( 0, 4 ), SubResource( 5 ), Vector2( 0, 5 ), SubResource( 6 ), Vector2( 1, 0 ), SubResource( 7 ), Vector2( 1, 1 ), SubResource( 8 ), Vector2( 1, 2 ), SubResource( 9 ), Vector2( 1, 3 ), SubResource( 10 ), Vector2( 1, 4 ), SubResource( 11 ), Vector2( 1, 5 ), SubResource( 12 ), Vector2( 2, 0 ), SubResource( 13 ), Vector2( 2, 1 ), SubResource( 14 ), Vector2( 2, 2 ), SubResource( 15 ), Vector2( 2, 3 ), SubResource( 16 ), Vector2( 2, 4 ), SubResource( 17 ), Vector2( 2, 5 ), SubResource( 18 ), Vector2( 3, 0 ), SubResource( 19 ), Vector2( 3, 1 ), SubResource( 20 ), Vector2( 3, 2 ), SubResource( 21 ), Vector2( 3, 3 ), SubResource( 22 ), Vector2( 3, 4 ), SubResource( 23 ), Vector2( 3, 5 ), SubResource( 24 ), Vector2( 4, 0 ), SubResource( 25 ), Vector2( 4, 1 ), SubResource( 26 ), Vector2( 4, 2 ), SubResource( 27 ), Vector2( 4, 3 ), SubResource( 28 ), Vector2( 4, 4 ), SubResource( 29 ), Vector2( 4, 5 ), SubResource( 30 ), Vector2( 5, 0 ), SubResource( 31 ), Vector2( 5, 1 ), SubResource( 32 ), Vector2( 5, 2 ), SubResource( 33 ), Vector2( 5, 3 ), SubResource( 34 ), Vector2( 5, 4 ), SubResource( 35 ), Vector2( 5, 5 ), SubResource( 36 ), Vector2( 6, 0 ), SubResource( 37 ), Vector2( 6, 1 ), SubResource( 38 ), Vector2( 6, 2 ), SubResource( 39 ), Vector2( 6, 3 ), SubResource( 40 ), Vector2( 6, 4 ), SubResource( 41 ), Vector2( 6, 5 ), SubResource( 42 ), Vector2( 7, 0 ), SubResource( 43 ), Vector2( 7, 1 ), SubResource( 44 ), Vector2( 7, 2 ), SubResource( 45 ), Vector2( 8, 0 ), SubResource( 46 ), Vector2( 8, 1 ), SubResource( 47 ) ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 48 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 48 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 49 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 50 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 51 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 52 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 53 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 54 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 55 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 56 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 57 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 58 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 59 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 60 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 61 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 62 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 63 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 8, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 64 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 65 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 66 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 67 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 68 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 69 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 70 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 71 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 72 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 73 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 74 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 75 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 76 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 77 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 78 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 79 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 80 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 81 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 82 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 83 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 84 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 85 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 4 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 86 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 87 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 88 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 89 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 90 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 91 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 92 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 5 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 93 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 94 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Level_template" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 95 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 2, 2, 1, 2, 3, 1, 2, 4, 1, 2, 5, 1, 2, 6, 1, 2, 7, 1, 2, 8, 1, 2, 9, 1, 2, 10, 1, 2, 11, 1, 2, 12, 1, 2, 13, 1, 2, 14, 1, 2, 15, 1, 1, 65536, 1, 65538, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 1, 65538, 131072, 1, 65538, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 1, 65538, 196608, 1, 65538, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 1, 65538, 262144, 1, 65538, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 1, 65538, 327680, 1, 65538, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 1, 65538, 393216, 1, 65538, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 1, 65538, 524287, 1, 0, 458752, 1, 65537, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 1, 65538, 589823, 1, 65538, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 1, 65538, 655359, 1, 65536, 589824, 1, 2, 589825, 1, 2, 589826, 1, 2, 589827, 1, 2, 589828, 1, 2, 589829, 1, 2, 589830, 1, 2, 589831, 1, 2, 589832, 1, 2, 589833, 1, 2, 589834, 1, 2, 589835, 1, 2, 589836, 1, 2, 589837, 1, 2, 589838, 1, 2, 589839, 1, 65537 )

[node name="YSort" type="YSort" parent="."]

[node name="MACC_bot" parent="YSort" instance=ExtResource( 3 )]

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Clock" type="Timer" parent="."]
[connection signal="timeout" from="RoundTimer" to="." method="_on_RoundTimer_timeout"]
[connection signal="timeout" from="Clock" to="." method="_on_Clock_timeout"]
